--- a/config.toml
+++ b/config.toml
@@ -1003,6 +1003,26 @@
   leetcodeId = "none"
   leetcodeRating = 0
 
+  [[Params.uchilePeople]]
+  name = "Isabella Cherubini"
+  nickname = "icherubini"
+  university = "PUC"
+  femeligible = true
+  icpc = true
+  ioi = false
+  codevita = true
+  meta_hackercup = true
+  ieeextreme = true
+  rayan = true
+  active = true
+  codeforcesId = "icherubini"
+  codeforcesRating = 1143
+  csesId = "none"
+  atcoderId = "none"
+  atcoderRating = 0
+  leetcodeId = "none"
+  leetcodeRating = 0
+
   # Teams ICPC
   [[Params.team]]
   name = "globos.get()"
